--- a/sites/all/modules/themekey/CHANGELOG.txt
+++ b/sites/all/modules/themekey/CHANGELOG.txt
@@ -1,4 +1,10 @@
-ThemeKey 6.x-3.5, 2011-xx-xx
+ThemeKey 6.x-3.6, 2011-09-19
+----------------------------
+[#1254144] mkalkbrenner: integration / support of Revisioning module
+[#1264310] tungscit, mkalkbrenner: Themekey path doesn't support special chars
+
+
+ThemeKey 6.x-3.5, 2011-08-17
 ----------------------------
 [        ] mkalkbrenner: hide debug information about current theme if themekey_debug_trace_rule_switching not set
 
